<resources>
    <string name="app_name">SmartHome</string>
    <string name="server_error">Помилка серверу</string>
    <string name="server_error_with_message">Помилка серверу: %1$s</string>
    <string name="network_error">Відсутній інтернет</string>

    <!-- Actions -->
    <string name="action_loading">Завантажуємо&#8230;</string>
    <string name="action_yes">Так</string>
    <string name="action_ok">OK</string>
    <string name="action_no">Ні</string>
    <string name="action_reload">Перезавантажити</string>
    <string name="action_logout">Вийти</string>
    <string name="action_stay">Продовжити керувати</string>
    <string name="action_save">Зберегти</string>

    <!-- Dialogs -->
    <string name="dialog_connectivity_error_title">Проблеми з мережею</string>
    <string name="dialog_connectivity_error_text">Не вдалось отримати дані з сервера. Перевірте підключення до мережі інтернет на вашому пристрої</string>
    <string name="dialog_generic_error_title">Проблеми з сервером</string>
    <string name="dialog_generic_error_text">Не вдалось отримати дані з сервера. Спробуйте, будь ласка, пізніше.</string>

    <!-- Temperature and humidity card -->
    <string name="temperature_text">%1$.1f &#8451;</string>
    <string name="humidity_text">%1$.1f %%</string>
    <string name="temperature_humidity_generic_error">Відбулась помилка при отриманні даних.</string>
    <string name="temperature_humidity_socket_disconnected">Відключено від серверу</string>
    <string name="temperature_humidity_socket_reconnecting">Підключаємось до серверу</string>
    <string name="temperature_humidity_no_data">Очікуємо дані</string>

    <!-- Electornic elements panel -->
    <string name="lights_title">Освітлення</string>
    <string name="rozette_title">Розетки</string>
    <string name="aquarium_title">Акваріум</string>

    <!-- States -->
    <string name="state_enabled">Увімкнено</string>
    <string name="state_disabled">Вимкнено</string>

    <!-- Rooms -->
    <string name="title_bedroom">Спальня</string>
    <string name="title_corridor">Коридор</string>
    <string name="title_living_room">Вітальня</string>
    <string name="title_kitchen">Кухня</string>
    <string name="title_boiler">Бойлер</string>

    <!-- login -->
    <string name="login_chernysh_home_title">Chernysh Home</string>
    <string name="login_enter_pin">Пін код або Fingerprint</string>
    <string name="login_number_1">1</string>
    <string name="login_number_2">2</string>
    <string name="login_number_3">3</string>
    <string name="login_number_4">4</string>
    <string name="login_number_5">5</string>
    <string name="login_number_6">6</string>
    <string name="login_number_7">7</string>
    <string name="login_number_8">8</string>
    <string name="login_number_9">9</string>
    <string name="login_number_0">0</string>

    <!-- flat -->
    <string name="flat_control_panel">Панель\n\t\t\t\tкерування</string>
    <string name="flat_alarm">Сирена</string>
    <string name="flat_boiler">Бойлер</string>
    <string name="flat_door">Двері</string>
    <string name="flat_netun">Нептун</string>
    <string name="flat_fire">Пожежна безпека</string>
    <string name="flat_security">Охорона</string>
    <string name="flat_camera">Камера</string>
    <string name="flat_danfoss">Опалення</string>
    <string name="flat_floor_heating">Тепла підлога</string>
    <string name="flat_air_conditioner">Кондиціонери</string>

    <string name="flat_outside_of_flat">За межами квартири:</string>

    <string name="flat_alert_dialog_title">Увімкнути сирену?</string>
    <string name="flat_alert_dialog_text">Не потрібно просто так гратись з сиреною. Може прийти злий сусід та наваляти тобі. Якщо ж ти впевнений в тому, що в квартиру увірвався злодій, хутчіше тисни на ТАК!!</string>

    <string name="flat_security_dialog_title">Увімкнути охорону?</string>
    <string name="flat_security_dialog_text">Закрий двері у ванну!!! Інакше коли бандити увірвуться в дім, камера не зможе їх розпізнати. Також, перевір чи вимкнено світло у хаті та нічого не загрожує пожежній безпеці.</string>

    <string name="logout_title">Ти серйозно?</string>
    <string name="logout_message">Невже ти хочеш вийти з цього витвору мистецтва? Твоя квартира хоч і розумна, але потребує надійного керівника&#8230;</string>

    <!-- Notifications -->
    <string name="notification_neptun_channel_title">Нептун</string>
    <string name="notification_neptun_alarm_title">Ти топиш сусідів</string>
    <string name="notification_neptun_alarm_message">Крани перекрито, проте варто звернути увагу на те, що було протікання води в квартирі. Необхідно це врегулювати</string>

    <string name="notification_security_enabled_channel_title">Увімкнення сигналізації</string>
    <string name="notification_security_enabled_alarm_title">Охорона</string>
    <string name="notification_security_enabled_alarm_message">Сигналізацію увімкнено, тепер твоя квартира під захистом</string>
    <string name="notification_security_disabled_alarm_message">Сигналізацію вимкнено, з поверненням друже!</string>

    <string name="notification_security_channel_title">Сигналізація</string>
    <string name="notification_security_alarm_title">В квартирі злодій</string>
    <string name="notification_security_alarm_message">Друже, схоже тебе грабують. Необхідно якомога швидше розібратись з покидьками</string>

    <string name="notification_fire_channel_title">Пожежа</string>
    <string name="notification_fire_alarm_title">Пожежа</string>
    <string name="notification_fire_alarm_message">Квартира в небезпеці, схоже щось загорілося. Бігом біжи додому і перевір що сталося. </string>

    <string name="notification_cpu_channel_title">Перегрів процесору контроллера</string>
    <string name="notification_cpu_alarm_title">Raspberry Pi страждає</string>
    <string name="notification_cpu_alarm_message">Центральний процесор Raspberry pi перегрівся. Його температура %1$s. Негайно охолоди контролер, інакше твій будинок стане тупим.</string>

    <!-- Fingerprint -->
    <string name="fingerprint_title">Приклади палець</string>
    <string name="fingerprint_subtitle">Авторизуйся в додаток з легкістю</string>
    <string name="fingerprint_negative_button">Використати ПІН</string>

    <!-- Boiler -->
    <string name="boiler_all_day_label">Цілодобово</string>
    <string name="boiler_schedule_successfully_updated">Графік роботи бойлера успішно оновлено</string>
    <string name="boiler_disabled">Бойлер вимкнено</string>
    <string name="boiler_all_day">Бойлер працює 24/7</string>
    <string name="boiler_disabled_schedule">Бойлер вимкнено. Налаштуйте графік роботи</string>


</resources>
