<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <include
        layout="@layout/layout_flat_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/viewNavDrawerBg"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:background="@drawable/navigation_drawer_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/flat_control_panel"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/viewNavDrawerBg"
                app:layout_constraintEnd_toEndOf="@+id/viewNavDrawerBg"
                app:layout_constraintStart_toStartOf="@+id/viewNavDrawerBg"
                app:layout_constraintTop_toTopOf="@id/viewNavDrawerBg" />

            <Switch
                android:id="@+id/switchAlarm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/flat_alarm"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewNavDrawerBg" />

            <Switch
                android:id="@+id/switchBoiler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/flat_boiler"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchAlarm" />

            <Switch
                android:id="@+id/switchDoor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/flat_door"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchBoiler" />

            <TextView
                android:id="@+id/tvNeptun"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_thumbs_up"
                android:gravity="center_vertical"
                android:padding="16dp"
                android:text="@string/flat_netun"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchDoor" />

            <ProgressBar
                android:id="@+id/pbNeptunLoading"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/tvNeptun"
                app:layout_constraintEnd_toEndOf="@+id/tvNeptun"
                app:layout_constraintTop_toTopOf="@+id/tvNeptun" />

            <TextView
                android:id="@+id/tvHumidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:drawableStart="@drawable/ic_humidity"
                android:drawablePadding="16dp"
                android:gravity="center_vertical|start"
                android:textColor="@color/textPrimary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="35%" />

            <TextView
                android:id="@+id/tvTemperature"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:drawableStart="@drawable/ic_thermometer"
                android:drawablePadding="16dp"
                android:gravity="center_vertical|start"
                android:textColor="@color/textPrimary"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/tvHumidity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="18.2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/flat_outside_of_flat"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/tvTemperature"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>